@@ -72,6 +72,8 @@ SEXP maphash_Ext(SEXP args);
 SEXP clrhash_Ext(SEXP args);
 SEXP ishashtab_Ext(SEXP args);
 
+SEXP tzcode_type(void);
+
 #ifdef Win32
 SEXP winProgressBar(SEXP call, SEXP op, SEXP args, SEXP rho);
 SEXP closeWinProgressBar(SEXP call, SEXP op, SEXP args, SEXP rho);
